refactor: 경기 진행 내역 출력을 위한 자동차 객체 리스트 생성 stream forEach -> map, collect